tests/rosetta/out/Java/100-doors-2.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:48Z
// 100-doors-2.mochi
import java.util.*;

public class 100Doors2 {
    public static void main(String[] args) {
    int door = 1;
    int incrementer = 0;
    for (int current = 1; current < 101; current++) {
        int line = "Door " + String.valueOf(current) + " ";
        if (Objects.equals(current, door)) {
            line = (int)(line + "Open");
            incrementer = (int)(incrementer + 1);
            door = (int)(door + 2 * incrementer + 1);
        }
        else {
            line = (int)(line + "Closed");
        }
        System.out.println(line);
    }
    }
}
